# polygine-v2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
examples/: main.cpp
extlibs/: CMakeLists.txt
include/ply/: EntryPoint.h
include/ply/components/: Lights.h  Spatial.h
include/ply/core/: Allocate.h  Async.h  Clock.h  Handle.h  HandleArray.h  HandleArray.inl  Macros.h  Mutex.h  Platform.h  PoolAllocator.h  PoolAllocator.inl  Scheduler.h  Scheduler.inl  Sleep.h  StringHash.h  Time.h  Tuple.h  Tuple.inl  TypeSet.h  TypeSet.inl  Types.h
include/ply/ecs/: ComponentStore.h  Entity.h  Entity.inl  EntityBuilder.h  EntityBuilder.inl  EntityFactory.h  EntityFactory.inl  EntityGroup.h  Observer.h  Observer.inl  Query.h  Query.inl  QueryBase.h  QueryBase.inl  QueryFactory.h  QueryFactory.inl  System.h  System.inl  Types.h  World.h  World.inl
include/ply/engine/: Events.h  Events.inl  Gamepad.h  Input.h  Keyboard.h  Mouse.h  Window.h
include/ply/graphics/: Buffer.h  Buffer.inl  Camera.h  Framebuffer.h  GpuResource.h  Image.h  Lights.h  Material.h  Pipeline.h  RenderDevice.h  RenderPass.h  RenderSystem.h  Renderer.h  Shader.h  Texture.h  Types.h
include/ply/math/: BoundingBox.h  Frustum.h  Functions.h  Plane.h  Ray.h  Sphere.h  Transform.h  Types.h
shaders/: ambient_glsl.psh  camera.fxh  cube.psh  cube.vsh  deferred_glsl.psh  deferred_hlsl.psh  dir_light.vsh  dir_light_glsl.psh  light_volume.vsh  light_volume_glsl.psh  material.fxh  quad.vsh  random.fxh  shadow_vis.psh  shadow_vis.vsh  shadows.fxh
src/: CMakeLists.txt
src/core/: Allocate.cpp  Async.cpp  Clock.cpp  Handle.cpp  PoolAllocator.cpp  Scheduler.cpp  Sleep.cpp  Time.cpp  TypeSet.cpp
src/ecs/: ComponentStore.cpp  Entity.cpp  EntityBuilder.cpp  EntityFactory.cpp  EntityGroup.cpp  Observer.cpp  Query.cpp  QueryBase.cpp  QueryFactory.cpp  System.cpp  World.cpp
src/engine/: Events.cpp  Gamepad.cpp  Input.cpp  Window.cpp
src/graphics/: Buffer.cpp  Camera.cpp  Framebuffer.cpp  GpuResource.cpp  Image.cpp  Pipeline.cpp  RenderDevice.cpp  RenderImpl.cpp  RenderImpl.h  RenderSystem.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/math/: BoundingBox.cpp  Frustum.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  Transform.cpp
